@@ -346,7 +346,7 @@ class Route(object):
         
         if self.conditions:
             if self.conditions.has_key('method') and \
-                environ.get('REQUEST_METHOD') not in self.conditions['method']:
+                environ.get('REQUEST_METHOD').upper() not in self.conditions['method']:
                 return False
             
             # Check sub-domains?
