@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.6.2 (**svn**)
+* Fixed issue with method checking not properly handling different letter
+  cases in REQUEST_METHOD. Reported by Sean Davis.
 * redirect_to now supports config.redirect returning a redirect, not just
   raising one.
 
